Expand collapse in main-nav on mobile - Fix for sub-nav and link alignment order incorrect when using html content making sub-nav get rendered above link in mobile mode - Vertical alignment of exapnd and collapse in main-nav on mobile - Fix for collapse icon not displayed in certain scenarios

--- a/src/components/main-navigation/style.less
+++ b/src/components/main-navigation/style.less
@@ -28,11 +28,16 @@
     primary-items,
     secondary-items {
       
-      > nav-item > a {
-        // Fixes issue where content could overflow its container.
-        // Making a horizontal scrollbar get displayed when a
-        // secondary navigation is available
-        overflow: hidden;
+      > nav-item {
+        display: flex;
+        flex-direction: column;
+
+        > a {
+          // Fixes issue where content could overflow its container.
+          // Making a horizontal scrollbar get displayed when a
+          // secondary navigation is available
+          overflow: hidden;
+        }
       }
     }
 
